# MLOPS

./: ProcFile.txt  README.md  pyproject.toml
house_pricing_app/: pyproject.toml  webapp.txt
house_pricing_app/.ipynb_checkpoints/: 221225F_Apple-checkpoint.csv  221225F_DataPreparationStarter-checkpoint.ipynb  221225F_PDSAssignment-checkpoint.ipynb  221225F_SentimentClassification-checkpoint.ipynb  221225F_TopicModelling-checkpoint.ipynb  AutoML-checkpoint.ipynb  BigARTM (1)-checkpoint.ipynb  DataPreparation-checkpoint.ipynb  DistilBERT-checkpoint.ipynb  ETL_Simple_Pipeline-checkpoint.ipynb  Exercise 1 - Tracking_quickstart-checkpoint.ipynb  Exercise 2 MLOps with Pycaret and MLflow (Local Drive)-checkpoint.ipynb  Exercise 2 MLOps with Pycaret and MLflow (Local Server)-checkpoint.ipynb  Exercise 2 MLOps with Pycaret and MLflow-checkpoint.ipynb  IT2381 Practical Test Starter-checkpoint.ipynb  IT2391_221225F_DataScraping (V_new)-checkpoint.ipynb  IT2391_221225F_DataScraping (final)-checkpoint.ipynb  IT2391_221225F_DataScraping(final) (1)-checkpoint.ipynb  IT2391_221225F_DataScraping(final) (2)-checkpoint.ipynb  IT2391_221225F_DataScraping(final)-checkpoint.ipynb  IT2391_221225F_DataScraping-checkpoint.ipynb  IT2394_221225F_preprocessing (final) (1) (1)-checkpoint.ipynb  IT2394_221225F_preprocessing (final)-checkpoint.ipynb  IT2394_221225F_textclass (1)-checkpoint.ipynb  IT2394_221225F_textclass-checkpoint.ipynb  Lab 2 - Data Preparation-checkpoint.ipynb  Lab 3 - BeautifulSoup Starter-checkpoint.ipynb  (+35 more)
mushroom_classification_app/: ProcFile.txt  pyproject.toml
(+8 files in other folders)
