[tool.poetry]
name = "amlops"
version = "0.1.0"
description = ""
authors = ["ccclia <hongyan210904@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.9,<3.9.7 || >3.9.7,<3.13"
dvc = "^3.53.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
